# resona

./: .gitignore  README.md  pyproject.toml  run_resona.py
backend/: audio_processor.py  main.py  youtube_downloader.py
frontend/: app.py
